Create all the setup files necessary for the project

--- a/Experiment/mcq.ipynb
+++ b/Experiment/mcq.ipynb
@@ -2,6 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json;\n",
+    "import pandas as pd;\n",
+    "import os;\n",
+    "import traceback;\n",
+    "from dotenv import load_dotenv;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "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\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_dotenv()\n",
+    "key = os.getenv('OpenAI_API_key')\n",
+    "print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +56,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.14"
   }
  },
