adjusted few details

--- a/Experiment/mcq.ipynb
+++ b/Experiment/mcq.ipynb
@@ -24,21 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "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\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "key = os.getenv('OpenAI_API_key')\n",
-    "print(key)"
+    "key = os.getenv('OpenAI_API_key')\n"
    ]
   },
   {
